Fixed paragraph whitespace within panels

--- a/generator/scss/website.scss
+++ b/generator/scss/website.scss
@@ -163,5 +163,6 @@ ul.side-nav.fixed li a {
   }
 }
 .panel p {
-  padding: 1rem !important;
+  margin: 1rem !important;
+  padding: 0 !important;
 }
